	into two, leaving the existing one for `\0`, `\^`, and `\|`
	escape sequences, and creating a new
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` for the parameterized `\h`
	escape sequence.

	* src/roff/troff/token.h (class token): Add new
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` enumeration constant.
	(token::is_horizontal_motion): Return `true` for both new and
	old token types.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/token.h (class token): Trivially refactor.
	Sort enumeration constants lexicographically by their symbol
	names.  It seems that they once were thus sorted (except for
	`TOKEN_EOF`), but my renaming activities have effaced that.
	Restore that ordering, but stop treating `TOKEN_EOF` specially.
	Its magnitude is never compared to anything (and shouldn't be).

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/pdf-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lj4-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lbp-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/safer-mode-works.sh: Fix newly added test
	to actually test what it means to test.  Continues commit
	49cbc926cf, 15 December.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Check
	unparameterized and invalid escape sequences for usability as
	escape sequence delimiters.  See Savannah #67375.

2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_title_parts): Throw deprecation
	warning in category "delim" if the delimiter is invalid and